# Portfolio

./: Final.cabal  README.md  app.py  chart.py  namesquery.py  requirements.txt  reviews.db  screencast_url.txt  sign.py  view.py
AdvancedFunctionalProgrammingFinalProject/src/: Sudoku.hs
InternetWebCloudSystemsFinalProject/: Dockerfile  project_url.txt  requirements.txt  view.py
InternetWebCloudSystemsFinalProject/static/: style.css
InternetWebCloudSystemsFinalProject/templates/: index.html  layout.html  sign.html
app/: Main.hs
components/: namesquery.py
gbmodel/: Model.py  __init__.py  model_datastore.py  model_sqlite3.py
src/: Sudoku.hs  Sudoku2.hs
static/: style.css
templates/: index.html  layout.html  sign.html  view.html
