cabal-version:      2.4
name:               Final
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: CS 557 Final Project, Winter 2022

-- A longer description of the package.
-- description:

-- The license under which the package is released.
-- license:
author:             Anna Hansen
maintainer:         ahansen@pdx.edu

-- A copyright notice.
copyright: (c) 2022 Anna Hansen
-- category:
extra-source-files: CHANGELOG.md

library
    exposed-modules:  Sudoku
    default-extensions: 
        GADTSyntax,
        TypeSynonymInstances,
        FlexibleInstances
    -- Modules included in this library but not exported.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:    base ^>=4.14.3.0
    hs-source-dirs:   src
    default-language: Haskell2010

executable Sudoku
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        Final

    hs-source-dirs:   app
    default-language: Haskell2010

    ghc-options:
      -fwarn-incomplete-patterns
      -fwarn-incomplete-uni-patterns
      -Werror
      -O2
