cabal-version:      2.4
name:               Final
version:            0.1.0.0

-- A short (one-line) description of the package.
synopsis: CS 557 Final Project, Winter 2022

-- A longer description of the package.
-- description:

-- The license under which the package is released.
-- license:
author:             Anna Hansen
maintainer:         ahansen@pdx.edu

-- A copyright notice.
copyright: (c) 2022 Anna Hansen
-- category:
extra-source-files: CHANGELOG.md

executable Sudoku
    main-is:          Main.hs
    other-modules: Sudoku

    hs-source-dirs:   app, src
    default-language: Haskell2010

    default-extensions: 
        GADTSyntax,
        GADTs,
        TypeSynonymInstances,
        FlexibleInstances,
        ImportQualifiedPost

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.14.3.0,
        brick ^>=0.68.1,
        text ^>=1.2.4.1,
        vty ^>=5.33,


    ghc-options:
      -fwarn-incomplete-patterns
      -fwarn-incomplete-uni-patterns
      -Werror
      -O2
      -threaded
